--- a/lambda/public/style.css
+++ b/lambda/public/style.css
@@ -1,9 +1,57 @@
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900 */
+
+.league-spartan {
+  font-family: "League Spartan", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
+
 body{
     background-image: url("background.png");
     
 }
 
 .container{
-    background-color: white;
+    background-color: rgb(139, 187, 216);
 
+}
+#resize{
+    height: 390px;
+    width: 280px;
+    border-style: solid;
+    border-color: #28648a;
+    box-shadow: 5px 10px 10px #28648a;
+    position: relative;
+    animation-name: fadein;
+    animation-duration: 1.5s;
+    animation-delay: 0.3s;
+}
+.title{
+    font-size: 40px;
+    font-family: "League Spartan", sans-serif;
+    text-align: center;
+    color: #28648a;
+    
+}
+.bookcover{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+}
+p{
+    font-family: "League Spartan", sans-serif;
+    font-size: 20px;
+}
+.img-fluid{
+    max-width: 100%;
+    height: auto;
+}
+#icon{
+    font-size: 90px;
+    justify-content: center;
+}
+i{
+    color: #28648a;
 }
